# calibench

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: record_demo.py
src/calibench/: __init__.py  _helpers.py  calibrators.py  metrics.py  report.py  visualise.py
tests/: test_calibrators.py  test_metrics.py  test_report.py  test_visualise.py
